--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +10,9 @@
   <link href="css/index.css" rel="stylesheet">
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-  <script src="js/index.js"></script>
+  <script src="js/anime.js"></script>
 </head>
+
 <body>
   <app></app>
 </body>
@@ -38,7 +40,7 @@
   var scriptedMsgRef = database.ref("/scriptedMsg");
   var userRef = database.ref("/user");
   var dialogRef = database.ref("/dialog");
-  
+
   riot.mount('*');
 </script>
 
