Score report attempt explanation

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <script src="tags/message.tag" type="riot/tag"></script>
 <script src="tags/response.tag" type="riot/tag"></script>
 <script src="tags/app.tag" type="riot/tag"></script>
-
+<script src="tags/scorereport.tag" type="riot/tag"></script>
 <script>
   // Initialize Firebase
   var config = {
